--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,16 +2,16 @@ name: Benchmarks
 
 on:
   push:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
   pull_request:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
 
 jobs:
   bench-linux:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
         dot-net-version: [ "7.0.100" ]
 
     steps:
