--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,9 +13,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
   pull_request:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
   schedule:
     - cron: '34 9 * * 2'
 
@@ -31,6 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'cpp' ]
+        python-version: ["3.10", "3.11"]
         dot-net-version: [ "7.0.100" ]
 
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
@@ -55,7 +56,7 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.python-version }}
         architecture: x64
     - name: Install CLR requirements
       run: |
