--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -1,9 +1,9 @@
 name: "Maintenance"
 on:
   push:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
   pull_request:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
 
 jobs:
   build:
