--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,9 +2,9 @@ name: Compile and test C++ package
 
 on:
   push:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
   pull_request:
-    branches: [ develop/main, develop/3.10 ]
+    branches: [ develop/main ]
 
 env:
   BUILD_TYPE: Release
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
         dot-net-version: [ "7.0.100" ]
     steps:
       - uses: actions/checkout@v4
