--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -3,6 +3,7 @@ name: Build
 on:
   push:
     branches: [ develop/main, develop/3.10 ]
+  pull_request: {}
 
 jobs:
   build_wheels:
@@ -10,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["macos-11", ubuntu-20.04, "windows-latest"]
+        os: ["macos-11", "ubuntu-20.04", "windows-latest"]
 
     steps:
       - uses: actions/checkout@v4
@@ -25,5 +26,6 @@ jobs:
         uses: pypa/cibuildwheel@v2.11.2
 
       - uses: actions/upload-artifact@v4
+        if: github.event_name != 'pull_request'
         with:
           path: ./wheelhouse/*.whl
